attempting to attch things together

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,10 +2,9 @@
 <html>
     <head>
         <title>{{title}}</title>
-        <nav>
-            <a href='/blog'>List all entries<br /></a>
-            <a href='/new_entry'>Create new entry</a>
-        </nav>
+        <div>
+            <a href='/blog'>Blog Home</a><br /><a href='/new_entry'>Create new entry</a>
+        </div>
     </head>
 <body>
     {% block content %}
