--- a/templates/blogpost.html
+++ b/templates/blogpost.html
@@ -1,11 +1,7 @@
-    
 {% extends "base.html" %}
-
 {% block content %}
-    <br /><br />
-    <h1>{{title}}</h1>
-    <div><p>{{body}}</p></div>
-    <br />
-    <hr />
+
+<h1>{{title}}</h1>
+<h3>{{content}}</h3>
 
 {% endblock %}
