fixed some issues

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,8 @@
     <head>
         <title>{{title}}</title>
         <div>
-            <a href='/blog'>Blog Home</a><br /><a href='/new_entry'>Create new entry</a>
+            ul display='inline'
+            <h2><a href='/blog'>Blog Home</a><br /><a href='/new_entry'>Create new entry</a></h2>
         </div>
     </head>
 <body>
