--- a/templates/home.html
+++ b/templates/home.html
@@ -3,8 +3,8 @@
     <table>
     {% for post in blogs %}
         <tr>
-            <h1><a href="">{{post.name}}</a></h1>
-            <h3>{{post.content}}</h3>
+            <h2><a href="">{{post.title}}</a></h2>
+            <p>{{post.content}}</p>
             <hr width="200" align="left">
 
         </tr>
