complete assignment, tested

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html>
     <head>
+        <style> .error {color: red;}</style>
         <title>{{title}}</title>
         <div>
-            ul display='inline'
-            <h2><a href='/blog'>Blog Home</a><br /><a href='/new_entry'>Create new entry</a></h2>
+            <h2><a href='/'>Blog Home</a><br /><a href='/new_entry'>Create new entry</a></h2>
         </div>
     </head>
 <body>
