--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,7 @@
     <table>
     {% for post in blogs %}
         <tr>
-            <h2><a href="">{{post.title}}</a></h2>
+            <h2><a href="/?id={{post.id}}">{{post.title}}</a></h2>
             <p>{{post.content}}</p>
             <hr width="200" align="left">
 
