--- a/templates/blogpost.html
+++ b/templates/blogpost.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h1>{{title}}</h1>
-<h3>{{content}}</h3>
+<h1>{{post.title}}</h1>
+<h3>{{post.content}}</h3>
 
 {% endblock %}
