--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,14 @@
         <style> .error {color: red;}</style>
         <title>{{title}}</title>
         <div>
-            <h2><a href='/'>Blog Home</a><br /><a href='/new_entry'>Create new entry</a></h2>
+            <a href='/'>Blog Home</a>   &#9474; 
+            <a href='/new_entry'>Create new entry</a>   &#9474; 
+
+            <a href='/signup'>Sign Up!</a>   
+        </div>
+        <div align="right">
+            <a href='/login'>Login</a>   &#9474; 
+            <a href='/logout'>Logout</a>
         </div>
     </head>
 <body>
