fixed user signup

--- a/templates/login.html
+++ b/templates/login.html
@@ -11,12 +11,14 @@
             </td>
             <td> 
                 <input id="username" name="username" type="text" value="{{username}}" />
+                <td class="error">{{username_error}}</td>
             </td>
             <td>
                 <label for="password">User Name:</label>
             </td>
             <td> 
                 <input id="password" name="password" type="password" value="{{password}}" />
+                <td class="password">{{password_error}}</td>
             </td>
             <td><input id="submit_button" type="submit" value="login"></td>
         </tr>
