--- a/templates/submission_form.html
+++ b/templates/submission_form.html
@@ -5,7 +5,7 @@
 {% block content %}
 <h1> New Blog Entry</h1>
 <table>
-    <form action="/entry" method="post">
+    <form action="/new_entry" method="post">
         <tr>
             <tr>
                 <label for="title_field">Title your post:</label>
