--- a/templates/login.html
+++ b/templates/login.html
@@ -18,7 +18,7 @@
             </td>
             <td> 
                 <input id="password" name="password" type="password" value="{{password}}" />
-                <td class="password">{{password_error}}</td>
+                <td class="error">{{password_error}}</td>
             </td>
             <td><input id="submit_button" type="submit" value="login"></td>
         </tr>
