fixed some navigation issues, broke some other stuff

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
         <style> .error {color: red;}</style>
         <title>{{title}}</title>
         <div>
-            <a href='/home'>Blog Home</a>   &#9474; 
+            <a href='/'>Blog Home</a>   &#9474; 
             <a href='/new_entry'>Create new entry</a>   &#9474; 
 
             <a href='/signup'>Sign Up!</a>   
