--- a/templates/index.html
+++ b/templates/index.html
@@ -1,16 +1,11 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
+
 {% block content %}
-<h1>Build a Blog!</h1>
-<div action="index"></div>
-<table>
-    {% for post in blogs %}
-        <tr>
-            <h2><a href="/?id={{post.id}}">{{post.title}}</a></h2>
-            <p>{{post.content}}</p>
-            <hr width="200" align="left">
-
-        </tr>
+      <div>
+        <h1>Blogz Members</h1>
+        <hr>
+        {% for user in users %}
+        <p><a href="/blog?userid={{user.id}}">{{ user.username }}</a></p>
         {% endfor %}
-</div>
-
+      </div>
 {% endblock %}
