--- a/templates/blogpost.html
+++ b/templates/blogpost.html
@@ -1,7 +1,19 @@
 {% extends "base.html" %}
+
 {% block content %}
+      <div>
 
-<h1>{{post.title}}</h1>
-<h3>{{post.content}}</h3>
+        <h1>User Posts</h1>
 
+        <hr>
+        {% for entry in entries %}
+        <div>
+
+          <a href="/blog?id={{post.id}}"><h2>{{ post.title }}</h2></a>
+          <p>{{ post.content }}</p>
+          <p>Written by: <a href="/blog?userid={{post.owner_id}}">{{ post.owner.username }}</a></p>
+
+        </div>
+        {% endfor %}
+      </div>
 {% endblock %}
