--- a/templates/login.html
+++ b/templates/login.html
@@ -14,7 +14,7 @@
                 <td class="error">{{username_error}}</td>
             </td>
             <td>
-                <label for="password">User Name:</label>
+                <label for="password">Password:</label>
             </td>
             <td> 
                 <input id="password" name="password" type="password" value="{{password}}" />
