fixed an issue with singleuser

--- a/templates/singleUser.html
+++ b/templates/singleUser.html
@@ -11,8 +11,8 @@
         <div>
 
           <a href="/blog?id={{entry.id}}"><h2>{{ entry.title }}</h2></a>
-          <p>{{ entry.body }}</p>
-          <p>Posted by: <a href="/blog?userid={{entry.owner_id}}">{{ entry.owner.username }}</a></p>
+          <p>{{ post.content }}</p>
+          <p>Posted by: <a href="/blog?userid={{entry.owner_id}}">{{ post.owner.username }}</a></p>
 
         </div>
         {% endfor %}
