--- a/templates/base.html
+++ b/templates/base.html
@@ -5,9 +5,10 @@
         <title>{{title}}</title>
         <div>
             <a href='/'>Blog Home</a>   &#9474; 
-            <a href='/new_entry'>Create new entry</a>   &#9474; 
+            <a href='/blogpost'>All Blog posts</a>    &#9474; 
+            <a href='/new_entry'>New Entry</a>
 
-            <a href='/signup'>Sign Up!</a>   
+  
         </div>
         <div align="right">
             <a href='/login'>Login</a>   &#9474; 
