--- a/templates/singleUser.html
+++ b/templates/singleUser.html
@@ -7,7 +7,7 @@
         <h1>User Posts</h1>
 
         <hr>
-        {% for entry in entries %}
+        {% for post in posts %}
         <div>
 
           <a href="/blog?id={{entry.id}}"><h2>{{ entry.title }}</h2></a>
