--- a/templates/blogpost.html
+++ b/templates/blogpost.html
@@ -6,7 +6,7 @@
         <h1>User Posts</h1>
 
         <hr>
-        {% for entry in entries %}
+        {% for post in posts %}
         <div>
 
           <a href="/blog?id={{post.id}}"><h2>{{ post.title }}</h2></a>
