--- a/templates/singleUser.html
+++ b/templates/singleUser.html
@@ -10,9 +10,9 @@
         {% for post in posts %}
         <div>
 
-          <a href="/blog?id={{entry.id}}"><h2>{{ entry.title }}</h2></a>
+          <a href="/blog?id={{post.id}}"><h2>{{ post.title }}</h2></a>
           <p>{{ post.content }}</p>
-          <p>Posted by: <a href="/blog?userid={{entry.owner_id}}">{{ post.owner.username }}</a></p>
+          <p>Posted by: <a href="/blog?userid={{post.owner_id}}">{{ post.owner.username }}</a></p>
 
         </div>
         {% endfor %}
