--- a/templates/singleUser.html
+++ b/templates/singleUser.html
@@ -1,18 +1,12 @@
-    
+
 {% extends "base.html" %}
 
 {% block content %}
       <div>
-
-        <h1>User Posts</h1>
-
+        <h1>Visitors</h1>
         <hr>
-        <div>
-          {% for post in posts %}
-          <a href="/userposts?id={{post.id}}"><h2>{{ post.title }}</h2></a>
-          <p>{{ post.content }}</p>
-          <p>Posted by: <a href="/userposts?userid={{post.owner_id}}">{{ post.owner.username }}</a></p>
-          {% endfor %}
-        </div>
+        {% for user in users %}
+        <p><a href="/index?userid={{user.id}}">{{ user.username }}</a></p>
+        {% endfor %}
       </div>
 {% endblock %}
