--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
         <style> .error {color: red;}</style>
         <title>{{title}}</title>
         <div>
-            <a href='/'>Blog Home</a>   &#9474; 
+            <a href='/'>Blogz Home</a>   &#9474; 
             <a href='/blogposts'>All Blog posts</a>    &#9474; 
             <a href='/new_entry'>New Entry</a>
 
