--- a/templates/singleUser.html
+++ b/templates/singleUser.html
@@ -3,10 +3,18 @@
 
 {% block content %}
       <div>
-        <h1>Visitors</h1>
+
+        <h1>User Posts</h1>
+
         <hr>
-        {% for user in users %}
-        <p><a href="/index?userid={{user.id}}">{{ user.username }}</a></p>
+        {% for post in posts %}
+        <div>
+
+          <a href="/userposts?id={{entry.id}}"><h2>{{ post.title }}</h2></a>
+          <p>{{ post.body }}</p>
+          <p>Posted by: <a href="/userposts?userid={{posty.owner_id}}">{{ entry.owner.username }}</a></p>
+
+        </div>
         {% endfor %}
       </div>
 {% endblock %}
