--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
         <title>{{title}}</title>
         <div>
             <a href='/'>Blogz Home</a>   &#9474; 
-            <a href='/blogposts'>All Blog posts</a>    &#9474; 
+            <a href='/userposts'>All Blog posts</a>    &#9474; 
             <a href='/new_entry'>New Entry</a>
 
   
