--- a/templates/singleUser.html
+++ b/templates/singleUser.html
@@ -10,9 +10,9 @@
         {% for post in posts %}
         <div>
 
-          <a href="/userposts?id={{entry.id}}"><h2>{{ post.title }}</h2></a>
-          <p>{{ post.body }}</p>
-          <p>Posted by: <a href="/userposts?userid={{posty.owner_id}}">{{ entry.owner.username }}</a></p>
+          <a href="/userposts?id={{post.id}}"><h2>{{ post.title }}</h2></a>
+          <p>{{ post.content }}</p>
+          <p>Posted by: <a href="/userposts?userid={{post.owner_id}}">{{ post.owner.username }}</a></p>
 
         </div>
         {% endfor %}
