tested all links, appears to be functioning properly

--- a/templates/singlepost.html
+++ b/templates/singlepost.html
@@ -5,7 +5,7 @@
     <div>
         <h2>{{ title }}</h2>
         <p>{{ content }}</p>
-        <p>Posted by: <a href="/blog?userid={{user_id}}">{{ user }}</a></p>
+        <p>Posted by: <a href="/userposts?userid={{user_id}}">{{ user }}</a></p>
 
       </div>
 {% endblock %}
