--- a/templates/blogpost.html
+++ b/templates/blogpost.html
@@ -9,9 +9,9 @@
         {% for post in posts %}
         <div>
 
-          <a href="/blogposts?id={{post.id}}"><h2>{{ post.title }}</h2></a>
+          <a href="/userposts?id={{post.id}}"><h2>{{ post.title }}</h2></a>
           <p>{{ post.content }}</p>
-          <p>Written by: <a href="/blogposts?userid={{post.owner_id}}">{{ post.owner.username }}</a></p>
+          <p>Written by: <a href="/userposts?userid={{post.owner_id}}">{{ post.owner.username }}</a></p>
 
         </div>
         {% endfor %}
